--- a/login form/index.html
+++ b/login form/index.html
@@ -17,9 +17,11 @@
             <div>
                 <input type="password" placeholder="password">
             </div>
-            <div>
-                <a href="login.html"><button>login</button></a>
-                <a href="signup.html"><button>signup</button></a>
+            <div class="anchor">
+                <a href="login.html">login</a>
+            </div>
+            <div class="anchor">    
+                <a href="signup.html">signup</a>
             </div>
         </div>
     </form>
