--- a/login form/signup.html
+++ b/login form/signup.html
@@ -27,7 +27,7 @@
                 <input type="radio" name="gender" id="female" value="female">
                 <label for="female">Female</label>
             </div>
-            <div class="btn">
+            <div class="anchor">
                 <a href="login.html"><button>Sign up</button></a>
             </div>
         </form>
